[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faithscore"
version = "0.0.1"
authors = [
  { name="Liqiang Jing", email="jingliqiang6@gmail.com"},
]
description = "Faithscore is a noverl metric for evaluating hallucinations in large vision-language models!"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
        "openai==0.27",
    "Pillow",
    "tqdm",
    "nltk",
    ]

[project.urls]
"Homepage" = "https://github.com/bcdnlp/FAITHSCORE"